* Tools: utxo_compress and utxo_decompress have been fixed
* Wallet: "bip39" switch can now have value of "-1", in which case the seed password will be treated as mnemonic
* Wallet: New commands "-encrypt" and "-decrypt", for encrypting and decrypting files with wallet's seed (password)
* Client: Maximum number of go-routines limited during certain operations

1.10.1 - 2022-06-15
* btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
* Wallet: Make SchnorrSign nonce dependent not only on RNG but also on the hash being signed
* Wallet: When listing non-hardend HD wallet (like Elecrum), also output the root Extended Public Key
* Lib: Added "github.com/piotrnar/gocoin/lib/others/scrypt" package (for wallet - see below)
* Wallet: added new config value "scrypt" - use extra scrypt function to convert password into private keys
* Client: fixed the bug in the fix for the bandwidth limiter lock problem occuring when system time changing
* Client: cleaned up some non-leathal race conditions, reformatted some code, got rid of some warnings
* Wallet: New command line switch "-pks" to dump wallet's raw public keys (instead of deposit addresses)
* Client/WebUI: Can work with raw-pubkeys wallets (wallet -list -pks), for smooth compatibility with all the deposit address types
* Client/TextUI: "balance" command can now also take a raw public key (hex-encoded)
* Client: Do not send "getmp" message to non-synchronized nodes
* Wallet: For commmon types of HD Wallets, also change addresses are calculated (use hdsubs=2)
* Wallet: New switch (or config file param) "-atype" replacing previous: "-segwit", "-bech32", "-tap", "-pks"
* Wallet: The "-pub <addr>" command should now work with all types of deposit addresses
* Client: Disconnect peers that have not sent any data within the last 5 minutes
* Client: New config value "Stat.NoCounters" - to be set for possible performance improvement